# madhav_maker_portfolio

./: .gitignore  README.md
Forj/: create_db.py
LiverAnnotation/: DESCRIPTION  LICENSE  README.md
MacrocycleDesign/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  requirements.txt  setup.cfg  setup.py
MacrocycleDesign/clean_env/Scripts/: activate
MacrocycleDesign/core/: relaxation.py
MacrocycleDesign/docs/: examples.rst  installation.rst
MacrocycleDesign/src/macrocycle_design/: pipeline.py
MacrocycleDesign/src/macrocycle_design/config/: __init__.py
MacrocycleDesign/src/macrocycle_design/core/: __init__.py  relaxation.py  rf_diffusion.py  structure_selection.py
MacrocycleDesign/src/macrocycle_design/utils/: __init__.py  file_io.py  geometry.py
MacrocycleDesign/tests/: test_core.py  test_import.py
QuizBowlPlatform/: .coverage  .gitignore  alembic.ini  app.py  check_alerts_table.py  check_db.py  check_db_schema.py  check_migrations.py  check_tables.py  database.py  deploy_with_db.sh  extensions.py  farsi_packet_content.txt  init_db.py  migrate_tournament_references.py  package-lock.json  package.json  requirements.txt  reset_db.py  sample_scorecard.json  seed_db.py  test_enhanced_parser.py  update_db.py  update_player_teams.py  update_players.py  wsgi.py
Vaach/: admin_panel.php  footer.php  guidelines.php  header.php  index-2.php  index-old.php  index.php  index_backup_20250927_201251.php  language.php  language_admin.php  language_request.php  login.php  navbar.php  notif.php  phrase_edit.php  phrase_request.php  privacy.php  register.php  style.css  terms.php  translation.php  (+2 more)
macrocycle_design/: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  pyproject.toml
macrocycle_design/clean_env/: pyvenv.cfg
macrocycle_design/clean_env/Scripts/: activate.bat
macrocycle_design/core/: __init__.py  af_design.py  pipeline.py
macrocycle_design/docs/: api.rst  conf.py  contributing.rst  getting_started.rst  index.rst  requirements-docs.txt  user_guide.rst
macrocycle_design/src/macrocycle_design/: README.md  __init__.py
macrocycle_design/src/macrocycle_design/config/: settings.py
macrocycle_design/src/macrocycle_design/core/: af_design.py  backbone_generation.py
(+242 files in other folders)
