[metadata]
description-file = README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    biopython>=1.79
    pandas>=1.3.0
    matplotlib>=3.4.0
    nglview>=3.0.0
    prody>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.0

dev =
    black>=21.0
    isort>=5.0
    flake8>=3.9
    mypy>=0.900
    pre-commit>=2.0

docs =
    sphinx>=4.0
    sphinx-rtd-theme>=0.5.0
    sphinx-autodoc-typehints>=1.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv

[egg_info]
tag_build = 
tag_date = 0

[aliases]
test = pytest
